--- a/src/RedShot.Desktop/RedShot.Desktop.csproj
+++ b/src/RedShot.Desktop/RedShot.Desktop.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,5 +11,10 @@
     <PackageReference Include="Avalonia" Version="0.9.11" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.11" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.11" />
+    <PackageReference Include="Eto.Forms" Version="2.5.2" />
+    <PackageReference Include="Eto.Platform.Wpf" Version="2.5.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RedShot.ScreenshotCapture\RedShot.ScreenshotCapture.csproj" />
   </ItemGroup>
 </Project>
