Refactor region selection, code clean up #SN-46

--- a/src/RedShot.App/RedShot.App/RedShot.App.csproj
+++ b/src/RedShot.App/RedShot.App/RedShot.App.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <CodeAnalysisRuleSet>../../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   
   <ItemGroup>
