--- a/src/RedShot.App/RedShot.App/RedShot.App.csproj
+++ b/src/RedShot.App/RedShot.App/RedShot.App.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.5.0" />
+    <PackageReference Include="Eto.Forms" Version="2.5.2" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
   </ItemGroup>
@@ -18,6 +18,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\RedShot.ScreenshotCapture\RedShot.ScreenshotCapture.csproj" />
+    <ProjectReference Include="..\..\RedShot.Upload\RedShot.Upload.csproj" />
   </ItemGroup>
   
   <ItemGroup>
