--- a/src/RedShot.App/RedShot.App.Desktop/RedShot.EtoForms.Desktop.csproj
+++ b/src/RedShot.App/RedShot.App.Desktop/RedShot.EtoForms.Desktop.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.GTK\Eto.Forms.Controls.SkiaSharp.GTK.csproj" />
+    <ProjectReference Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.WinForms\Eto.Forms.Controls.SkiaSharp.WinForms.csproj" />
+    <ProjectReference Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp\Eto.Forms.Controls.SkiaSharp.csproj" />
     <ProjectReference Include="..\RedShot.App\RedShot.App.csproj" />
   </ItemGroup>
 
