--- a/src/RedShot.App/RedShot.App/RedShot.App.csproj
+++ b/src/RedShot.App/RedShot.App/RedShot.App.csproj
@@ -8,6 +8,10 @@
   
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   
   <ItemGroup>
@@ -16,7 +20,14 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\RedShot.ScreenshotCapture\RedShot.ScreenshotCapture.csproj" />
+    <ProjectReference Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp\Eto.Forms.Controls.SkiaSharp.csproj" />
     <ProjectReference Include="..\..\RedShot.Upload\RedShot.Upload.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Update="EditorViewDrawingSkiaSharp.eto.cs">
+      <DependentUpon>EditorViewDrawingSkiaSharp.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   
   <ItemGroup>
