--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp/Eto.Forms.Controls.SkiaSharp.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp/Eto.Forms.Controls.SkiaSharp.csproj
@@ -1,14 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <CodeAnalysisRuleSet>../../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Eto.Forms" Version="2.5.2" />
+    <PackageReference Include="SkiaSharp" Version="2.80.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
 
 </Project>
