--- a/src/RedShot.App/RedShot.App/RedShot.App.csproj
+++ b/src/RedShot.App/RedShot.App/RedShot.App.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+	<PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="SkiaSharp.NativeAssets.Linux" Version="2.80.1" />
     <PackageReference Include="Eto.Forms" Version="2.5.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
@@ -15,11 +16,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <ProjectReference Include="..\..\RedShot.ScreenshotCapture\RedShot.ScreenshotCapture.csproj" />
+    <ProjectReference Include="..\..\RedShot.Helpers\RedShot.Helpers.csproj" />
     <ProjectReference Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp\Eto.Forms.Controls.SkiaSharp.csproj" />
     <ProjectReference Include="..\..\RedShot.Upload\RedShot.Upload.csproj" />
   </ItemGroup>
@@ -28,12 +25,6 @@
     <Compile Update="EditorViewDrawingSkiaSharp.eto.cs">
       <DependentUpon>EditorViewDrawingSkiaSharp.cs</DependentUpon>
     </Compile>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <None Update="Resources\red-circle.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   
 </Project>
