--- a/src/RedShot.Upload/RedShot.Upload.csproj
+++ b/src/RedShot.Upload/RedShot.Upload.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -12,6 +12,10 @@
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\RedShot.Helpers\RedShot.Helpers.csproj" />
 	</ItemGroup>
 
 </Project>
