--- a/src/RedShot.Upload/RedShot.Upload.csproj
+++ b/src/RedShot.Upload/RedShot.Upload.csproj
@@ -17,6 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\RedShot.Configuration\RedShot.Configuration.csproj" />
 	  <ProjectReference Include="..\RedShot.Helpers\RedShot.Helpers.csproj" />
 	</ItemGroup>
 
