--- a/src/RedShot.Configuration/RedShot.Configuration.csproj
+++ b/src/RedShot.Configuration/RedShot.Configuration.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="8.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RedShot.Helpers\RedShot.Helpers.csproj" />
   </ItemGroup>
 
