--- a/src/RedShot.Configuration/RedShot.Configuration.csproj
+++ b/src/RedShot.Configuration/RedShot.Configuration.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="YamlDotNet" Version="8.1.2" />
   </ItemGroup>
 
