--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.GTK/Eto.Forms.Controls.SkiaSharp.GTK.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.GTK/Eto.Forms.Controls.SkiaSharp.GTK.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Eto.Platform.Gtk" Version="2.5.2" />
     <PackageReference Include="GtkSharp" Version="3.22.25.98" />
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
