--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.WinForms/Eto.Forms.Controls.SkiaSharp.WinForms.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.WinForms/Eto.Forms.Controls.SkiaSharp.WinForms.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Platform.Windows" Version="2.5.2" />
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="SkiaSharp.Views" Version="2.80.1" />
     <PackageReference Include="SkiaSharp.Views.WindowsForms" Version="2.80.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
