--- a/src/RedShot.Upload/RedShot.Upload.csproj
+++ b/src/RedShot.Upload/RedShot.Upload.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Eto.Forms" Version="2.5.2" />
 	  <PackageReference Include="FluentFTP" Version="32.4.3" />
+	  <PackageReference Include="NLog" Version="4.7.2" />
 	  <PackageReference Include="SSH.NET" Version="2016.1.0" />
 	  <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 	    <PrivateAssets>all</PrivateAssets>
