--- a/src/RedShot.App/RedShot.App.Desktop/nlog.config
+++ b/src/RedShot.App/RedShot.App.Desktop/nlog.config
@@ -9,7 +9,7 @@
 	<targets>
 		<!-- write logs to file  -->
 		<target xsi:type="File" name="allfile" fileName="${basedir}/logs/${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
 		</targets>
 
 	<!-- rules to map from logger name to target -->
