--- a/src/RedShot.Helpers/RedShot.Helpers.csproj
+++ b/src/RedShot.Helpers/RedShot.Helpers.csproj
@@ -6,13 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.5.2" />
+    <PackageReference Include="Eto.Forms" Version="2.5.3" />
     <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="SkiaSharp" Version="2.80.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RedShot.Abstractions\RedShot.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
