--- a/src/RedShot.Upload/RedShot.Upload.csproj
+++ b/src/RedShot.Upload/RedShot.Upload.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Eto.Forms" Version="2.5.2" />
+	  <PackageReference Include="Eto.Forms" Version="2.5.3" />
 	  <PackageReference Include="FluentFTP" Version="32.4.3" />
 	  <PackageReference Include="NLog" Version="4.7.2" />
 	  <PackageReference Include="SSH.NET" Version="2016.1.0" />
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\RedShot.Abstractions\RedShot.Abstractions.csproj" />
 	  <ProjectReference Include="..\RedShot.Configuration\RedShot.Configuration.csproj" />
 	  <ProjectReference Include="..\RedShot.Helpers\RedShot.Helpers.csproj" />
 	</ItemGroup>
