Fix Linux issues #SN-46

--- a/src/RedShot.Helpers/RedShot.Helpers.csproj
+++ b/src/RedShot.Helpers/RedShot.Helpers.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\RedShot.Abstractions\RedShot.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Forms\DefaultButton.eto.cs">
+      <DependentUpon>DefaultButton.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
