--- a/src/RedShot.App/RedShot.App/RedShot.App.csproj
+++ b/src/RedShot.App/RedShot.App/RedShot.App.csproj
@@ -8,6 +8,7 @@
   
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.2" />
+    <PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
     <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="SkiaSharp.NativeAssets.Linux" Version="2.80.1" />
     <PackageReference Include="Eto.Forms" Version="2.5.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
