--- a/src/RedShot.App/RedShot.App/RedShot.App.csproj
+++ b/src/RedShot.App/RedShot.App/RedShot.App.csproj
@@ -27,6 +27,18 @@
     <Compile Update="EditorViewDrawingSkiaSharp.eto.cs">
       <DependentUpon>EditorViewDrawingSkiaSharp.cs</DependentUpon>
     </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   
 </Project>
