Add control for Mac OS #SN-46

--- a/src/RedShot.App/RedShot.App.Desktop/RedShot.EtoForms.Desktop.csproj
+++ b/src/RedShot.App/RedShot.App.Desktop/RedShot.EtoForms.Desktop.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\RedShot.Configuration\RedShot.Configuration.csproj" />
     <ProjectReference Condition=" '$(OS)' != 'Windows_NT' " Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.GTK\Eto.Forms.Controls.SkiaSharp.GTK.csproj" />
+    <ProjectReference Condition=" '$(OS)' != 'Windows_NT' " Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.GTK\Eto.Forms.Controls.SkiaSharp.Mac.csproj" />
     <ProjectReference Condition=" '$(OS)' == 'Windows_NT' " Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.WinForms\Eto.Forms.Controls.SkiaSharp.WinForms.csproj" />
     <ProjectReference Include="..\..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp\Eto.Forms.Controls.SkiaSharp.csproj" />
     <ProjectReference Include="..\RedShot.App\RedShot.App.csproj" />
