--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.Mac/Eto.Forms.Controls.SkiaSharp.Mac.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.Mac/Eto.Forms.Controls.SkiaSharp.Mac.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+      <CodeAnalysisRuleSet>../../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
