--- a/src/RedShot.App/RedShot.App.Desktop/nlog.config
+++ b/src/RedShot.App/RedShot.App.Desktop/nlog.config
@@ -10,11 +10,18 @@
 		<!-- write logs to file  -->
 		<target xsi:type="File" name="allfile" fileName="${basedir}/logs/${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
+
+    <target xsi:type="File" name="ffmpegDebug" fileName="${basedir}/logs/ffmpeg-${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
 		</targets>
+  
+  
 
 	<!-- rules to map from logger name to target -->
 	<rules>
 		<!--All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
+
+    <logger name="Ffmpeg" minlevel="Trace" writeTo="ffmpegDebug" />
 	</rules>
 </nlog>
