--- a/src/RedShot.Recording/RedShot.Recording.csproj
+++ b/src/RedShot.Recording/RedShot.Recording.csproj
@@ -1,8 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <DefineConstants>_WINDOWS</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+    <DefineConstants>_UNIX</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +26,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RedShot.Helpers\RedShot.Helpers.csproj" />
+    <ProjectReference Condition=" '$(OS)' == 'Windows_NT' " Include="..\RedShot.Platforms.Windows\RedShot.Platforms.Windows.csproj" />
+    <ProjectReference Include="..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp\Eto.Forms.Controls.SkiaSharp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Forms\AreaSelectingView.eto.cs">
+      <DependentUpon>AreaSelectingView.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
