--- a/src/RedShot.App/RedShot.App.Desktop/nlog.config
+++ b/src/RedShot.App/RedShot.App.Desktop/nlog.config
@@ -19,9 +19,10 @@
 
 	<!-- rules to map from logger name to target -->
 	<rules>
+    
+    <logger name="Ffmpeg" minlevel="Trace" writeTo="ffmpegDebug" final="true" />
+    
 		<!--All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
-
-    <logger name="Ffmpeg" minlevel="Trace" writeTo="ffmpegDebug" />
 	</rules>
 </nlog>
