Change video options, add validation for options, start creating recording for Linux #NC-56

--- a/src/RedShot.App/RedShot.App.Desktop/nlog.config
+++ b/src/RedShot.App/RedShot.App.Desktop/nlog.config
@@ -13,12 +13,18 @@
 
     <target xsi:type="File" name="ffmpegDebug" fileName="${basedir}/logs/ffmpeg-${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
-		</targets>
+
+    <target xsi:type="File" name="CLIdebug" fileName="${basedir}/logs/ffmpeg-${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
+
+  </targets>
   
   
 
 	<!-- rules to map from logger name to target -->
 	<rules>
+
+    <logger name="CLIdebug" minlevel="Trace" writeTo="CLIdebug" final="true" />
     
     <logger name="Ffmpeg" minlevel="Trace" writeTo="ffmpegDebug" final="true" />
     
