--- a/src/RedShot.App/RedShot.App.Desktop/nlog.config
+++ b/src/RedShot.App/RedShot.App.Desktop/nlog.config
@@ -14,7 +14,7 @@
     <target xsi:type="File" name="ffmpegDebug" fileName="${basedir}/logs/ffmpeg-${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
 
-    <target xsi:type="File" name="CLIdebug" fileName="${basedir}/logs/ffmpeg-${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
+    <target xsi:type="File" name="CLIdebug" fileName="${basedir}/logs/cli-${date:format=yyyy-MM-dd\:HH-mm-ss:cached=true}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|${exception:format=Message,StackTrace,Data:maxInnerExceptionLevel=10}" />
 
   </targets>
