--- a/src/RedShot.Configuration/RedShot.Configuration.csproj
+++ b/src/RedShot.Configuration/RedShot.Configuration.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
@@ -17,5 +17,6 @@
   <ItemGroup>
     <ProjectReference Include="..\RedShot.Helpers\RedShot.Helpers.csproj" />
   </ItemGroup>
+
 
 </Project>
