Rename projects, update usings, move files to appropriate folders; create separate project for resources #NC-56

--- a/src/RedShot.Infrastructure.Configuration/RedShot.Infrastructure.Configuration.csproj
+++ b/src/RedShot.Infrastructure.Configuration/RedShot.Infrastructure.Configuration.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="YamlDotNet" Version="8.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RedShot.Infrastructure.DataTransfer\RedShot.Infrastructure.DataTransfer.csproj" />
+  </ItemGroup>
+
 
 </Project>
