--- a/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
+++ b/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
@@ -21,21 +21,13 @@
 	  <ProjectReference Include="..\RedShot.Configuration\RedShot.Infrastructure.Configuration.csproj" />
 	  <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
 	  <ProjectReference Include="..\RedShot.Infrastructure.Common\RedShot.Infrastructure.Common.csproj" />
+	  <ProjectReference Include="..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
+	  <ProjectReference Include="..\RedShot.Infrastructure.DataTransfer\RedShot.Infrastructure.DataTransfer.csproj" />
+	  <ProjectReference Include="..\RedShot.Resources\RedShot.Resources.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Properties\Resources.Designer.cs">
-	    <DesignTime>True</DesignTime>
-	    <AutoGen>True</AutoGen>
-	    <DependentUpon>Resources.resx</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <EmbeddedResource Update="Properties\Resources.resx">
-	    <Generator>ResXFileCodeGenerator</Generator>
-	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-	  </EmbeddedResource>
+	  <Folder Include="Properties\" />
 	</ItemGroup>
 
 
