--- a/src/RedShot.Infrastructure/RedShot.Infrastructure.csproj
+++ b/src/RedShot.Infrastructure/RedShot.Infrastructure.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.7.2" />
+    <PackageReference Include="NLog" Version="4.7.4" />
     <PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
     <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="SkiaSharp.NativeAssets.Linux" Version="2.80.1" />
-    <PackageReference Include="Eto.Forms" Version="2.5.3" />
+    <PackageReference Include="Eto.Forms" Version="2.5.5" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +18,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Condition="'$(Configuration)'=='Debug'" Include="..\RedShot.DebugLib\RedShot.DebugLib.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Common\RedShot.Infrastructure.Common.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Recording\RedShot.Infrastructure.Recording.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Uploading\RedShot.Infrastructure.Uploading.csproj" />
