--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.WinForms/Eto.Forms.Controls.SkiaSharp.WinForms.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.WinForms/Eto.Forms.Controls.SkiaSharp.WinForms.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <CodeAnalysisRuleSet>../../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
+    <NoWarn>NU1701;$(NoWarn)</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
