--- a/src/RedShot.Application/RedShot.Application.csproj
+++ b/src/RedShot.Application/RedShot.Application.csproj
@@ -6,6 +6,7 @@
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <AssemblyName>redshot</AssemblyName>
     <ApplicationIcon>Redcircle.ico</ApplicationIcon>
+    <NoWarn>NU1701;$(NoWarn)</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
@@ -27,7 +28,6 @@
 
   <ItemGroup>
     <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="Eto.Platform.Gtk" Version="2.5.5" />
-    <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="Eto.Platform.Mac64" Version="2.5.5" />
     <PackageReference Condition=" '$(OS)' == 'Windows_NT' " Include="Eto.Platform.Windows" Version="2.5.5" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
     <PackageReference Include="NLog" Version="4.7.4" />
