--- a/src/RedShot.Platforms.Linux/RedShot.Platforms.Linux.csproj
+++ b/src/RedShot.Platforms.Linux/RedShot.Platforms.Linux.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Windows" Version="2.5.5" />
+    <PackageReference Include="Eto.Platform.Gtk" Version="2.5.5" />
+    <PackageReference Include="GtkSharp" Version="3.22.25.125" />
     <PackageReference Include="NLog" Version="4.7.4" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
