--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.Mac/Eto.Forms.Controls.SkiaSharp.Mac.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.Mac/Eto.Forms.Controls.SkiaSharp.Mac.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Eto.Platform.Mac64" Version="2.5.5" />
     <PackageReference Include="SkiaSharp.Views" Version="2.80.1" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
