--- a/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
+++ b/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
@@ -27,8 +27,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Uploaders\Ftp\Settings\FtpOptionDialog.eto.cs">
-	    <DependentUpon>FtpOptionDialog.cs</DependentUpon>
+	  <Compile Update="Uploaders\FTP\Settings\FtpOptionControl.eto.cs">
+	    <DependentUpon>FtpOptionControl.cs</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
