--- a/src/RedShot.Application/RedShot.Application.csproj
+++ b/src/RedShot.Application/RedShot.Application.csproj
@@ -20,6 +20,7 @@
     <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="SkiaSharp.NativeAssets.Linux" Version="2.80.1" />
     <ProjectReference Include="..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Settings\RedShot.Infrastructure.Settings.csproj" />
+    <ProjectReference Include="..\RedShot.Shortcut\RedShot.Shortcut.csproj" />
     <ProjectReference Condition=" '$(OS)' != 'Windows_NT' " Include="..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.GTK\Eto.Forms.Controls.SkiaSharp.GTK.csproj" />
     <ProjectReference Condition=" '$(OS)' == 'Windows_NT' " Include="..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp.WinForms\Eto.Forms.Controls.SkiaSharp.WinForms.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure\RedShot.Infrastructure.csproj" />
