--- a/src/RedShot.Shortcut/RedShot.Shortcut.csproj
+++ b/src/RedShot.Shortcut/RedShot.Shortcut.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -6,7 +6,14 @@
 		<CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
-	<ItemGroup>
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <DefineConstants>_WINDOWS</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+    <DefineConstants>_UNIX</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
 		<PackageReference Include="Eto.Forms" Version="2.5.5" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<PrivateAssets>all</PrivateAssets>
@@ -17,6 +24,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
 	  <ProjectReference Include="..\RedShot.Infrastructure\RedShot.Infrastructure.csproj" />
+    <ProjectReference Condition=" '$(OS)' == 'Windows_NT' " Include="..\RedShot.Platforms.Windows\RedShot.Platforms.Windows.csproj" />
 	</ItemGroup>
 
 </Project>
