Create hotkey classes for Windows and Linux #SN-50

--- a/src/RedShot.Shortcut/RedShot.Shortcut.csproj
+++ b/src/RedShot.Shortcut/RedShot.Shortcut.csproj
@@ -25,6 +25,7 @@
 	  <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
 	  <ProjectReference Include="..\RedShot.Infrastructure\RedShot.Infrastructure.csproj" />
     <ProjectReference Condition=" '$(OS)' == 'Windows_NT' " Include="..\RedShot.Platforms.Windows\RedShot.Platforms.Windows.csproj" />
+    <ProjectReference Condition=" '$(OS)' != 'Windows_NT' " Include="..\RedShot.Platforms.Linux\RedShot.Platforms.Linux.csproj" />
 	</ItemGroup>
 
 </Project>
