--- a/src/RedShot.Infrastructure.Recording/RedShot.Infrastructure.Recording.csproj
+++ b/src/RedShot.Infrastructure.Recording/RedShot.Infrastructure.Recording.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.6" />
+    <PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
