--- a/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
+++ b/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+    <PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
 	  <PackageReference Include="Eto.Forms" Version="2.5.6" />
 	  <PackageReference Include="FluentFTP" Version="32.4.7" />
 	  <PackageReference Include="NLog" Version="4.7.5" />
