--- a/src/RedShot.Infrastructure.Screenshooting/RedShot.Infrastructure.Screenshooting.csproj
+++ b/src/RedShot.Infrastructure.Screenshooting/RedShot.Infrastructure.Screenshooting.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="NLog" Version="4.7.5" />
+		<PackageReference Include="Prism.Core" Version="8.0.0.1909" />
 		<PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
 		<PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="SkiaSharp.NativeAssets.Linux" Version="2.80.1" />
 		<PackageReference Include="Eto.Forms" Version="2.5.6" />
@@ -15,6 +16,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="System.Runtime" Version="4.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
