Add application settings to the application #SN-61

--- a/src/RedShot.Application/RedShot.Application.csproj
+++ b/src/RedShot.Application/RedShot.Application.csproj
@@ -25,6 +25,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.6.5" />
     <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="SkiaSharp.NativeAssets.Linux" Version="2.80.2" />
     <ProjectReference Include="..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
     <ProjectReference Include="..\RedShot.Initialization\RedShot.Initialization.csproj" />
@@ -43,8 +44,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="nlog.config">
+    <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
   </ItemGroup>
 
