Fix FFmpeg path configuration #SN-59

--- a/src/RedShot.Application/appsettings.json
+++ b/src/RedShot.Application/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
     "Email": "redshot@saritasa.com",
-    "FfmpegWindowsDownloadPath": "https://github.com/BtbN/FFmpeg-Builds/releases/download/autobuild-2020-10-11-12-31/ffmpeg-N-99531-g2be3eb7f77-win64-gpl.zip",
+    "FfmpegWindowsDownloadPath": "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip",
     "FormatFileNameTag": "%"
   }
 }
