--- a/src/RedShot.Infrastructure/RedShot.Infrastructure.csproj
+++ b/src/RedShot.Infrastructure/RedShot.Infrastructure.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.7.5" />
-    <PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
-    <PackageReference Include="Eto.Forms" Version="2.5.6" />
+    <PackageReference Include="NLog" Version="4.7.7" />
+    <PackageReference Include="Saritasa.Tools.Common" Version="3.3.1" />
+    <PackageReference Include="Eto.Forms" Version="2.5.10" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
