--- a/src/RedShot.Infrastructure.Abstractions/RedShot.Infrastructure.Abstractions.csproj
+++ b/src/RedShot.Infrastructure.Abstractions/RedShot.Infrastructure.Abstractions.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.5.6" />
+    <PackageReference Include="Eto.Forms" Version="2.5.10" />
     <PackageReference Include="SkiaSharp" Version="2.80.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
