--- a/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.GTK/Eto.Forms.Controls.SkiaSharp.GTK.csproj
+++ b/src/RedShot.SkiaSharpControl/Eto.Forms.Controls.SkiaSharp.GTK/Eto.Forms.Controls.SkiaSharp.GTK.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <CodeAnalysisRuleSet>../../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Gtk" Version="2.5.6" />
+    <PackageReference Include="Eto.Platform.Gtk" Version="2.5.10" />
     <PackageReference Include="GtkSharp" Version="3.22.25.128" />
-    <PackageReference Include="NLog" Version="4.7.5" />
+    <PackageReference Include="NLog" Version="4.7.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
