--- a/src/RedShot.Application/RedShot.Application.csproj
+++ b/src/RedShot.Application/RedShot.Application.csproj
@@ -1,9 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <TargetFramework>net5.0-windows</TargetFramework>
+  </PropertyGroup>
+
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
-    <TargetFrameworks>net5.0-windows;net5.0</TargetFrameworks>
     <AssemblyName>redshot</AssemblyName>
     <ApplicationIcon>Redcircle.ico</ApplicationIcon>
     <NoWarn>NU1701;$(NoWarn)</NoWarn>
