Add save user configuration on settings window closing #SN-69

--- a/src/RedShot.Infrastructure.Settings/RedShot.Infrastructure.Settings.csproj
+++ b/src/RedShot.Infrastructure.Settings/RedShot.Infrastructure.Settings.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Common\RedShot.Infrastructure.Common.csproj" />
   </ItemGroup>
