Update configuration logic with new providers, add mappers #SN-69

--- a/src/RedShot.Infrastructure.Settings/RedShot.Infrastructure.Settings.csproj
+++ b/src/RedShot.Infrastructure.Settings/RedShot.Infrastructure.Settings.csproj
@@ -34,8 +34,8 @@
     <Compile Update="Sections\Ftp\FtpOptionControl.eto.cs">
       <DependentUpon>$([System.String]::Copy('%(Filename)').Replace('.eto', ''))%(Extension)</DependentUpon>
     </Compile>
-    <Compile Update="Sections\Recording\RecordingOptionControl.eto.cs">
-      <DependentUpon>$([System.String]::Copy('%(Filename)').Replace('.eto', ''))%(Extension)</DependentUpon>
+    <Compile Update="Sections\Recording\RecordingOptionsControl.eto.cs">
+      <DependentUpon>RecordingOptionsControl.cs</DependentUpon>
     </Compile>
   </ItemGroup>
 
